# person_api

./: Person API.postman_collection.json  README.md  api_test_script.py  db.py  main.py  models.py  pyproject.toml  routers.py
